# eyes

./: .buildinfo  .dockerignore  .editorconfig  .env.testing  .gitignore  .pre-commit-config.yaml  .pylintrc  .style.yapf  AUTHORS  CITATION.cff  CODE_OF_CONDUCT.md  Dockerfile  LICENSE  README.md  genindex.html  index.html  objects.inv  py-modindex.html  pyproject.toml  search.html  searchindex.js
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml  post-install.sh
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  question.md
.github/workflows/: checks.yml  deploy.yml  doc.yml  testing.yml
_sources/: index.rst.txt
config/: eyes.yaml
config/spacy/: zh_core_eyes_md.cfg
doc/: conf.py  index.rst
eyes/: __init__.py  app.py  cmd.py  config.py  crawler.py  data.py  db.py  exception.py  job.py  schema.py  task.py  tasks.py  type.py
eyes/app/: main.py
eyes/celery/: __init__.py
eyes/cmd/: __init__.py  db.py  job.py  train.py
eyes/crawler/: dcard.py  entity.py  ptt.py  utils.py
eyes/data/: __init__.py  dcard.py  ptt.py  spacy.py  stats.py
eyes/db/: __init__.py  dcard.py  ptt.py  spacy.py  stats.py  wiki.py
eyes/ml/: lf.py  spacy.py  train.py
helm-charts/: .gitignore  README.md
helm-charts/api/: Chart.yaml  values.yaml
helm-charts/celery/: values.yaml
helm-charts/config/: Chart.yaml
helm-charts/crawlers/: Chart.yaml  values.yaml
helm-charts/dev/: Chart.yaml  values.yaml
helm-charts/eyes/: Chart.yaml  values.yaml
tests/: test_crawler.py
web/: Dockerfile  README.md  package-lock.json  package.json  tailwind.config.js
(+111 files in other folders)
