[tool.poetry]
name = "eyes"
version = "0.1.0"
description = "Taiwanese Public Opinion Mining System"
authors = ["Sean Chang <seanchang@kklab.com>"]

[tool.poetry.dependencies]
python = "~3.7"
pydantic = "^1.8.2"
SQLAlchemy = "^1.4.22"
celery = {extras = ["redis"], version = "^5.1.2"}
rich = "^10.6.0"
SQLAlchemy-Utils = "^0.37.8"
click = "^7.0"
mysqlclient = "^2.0.3"
bs4 = "^0.0.1"
requests = "^2.26.0"
lxml = "^4.6.3"
flower = "^1.0.0"
python-dotenv = "^0.19.0"
fake-useragent = "^0.1.11"
uvicorn = "^0.15.0"
graphene = "^2.1.9"
fastapi = "^0.68.1"
graphene-sqlalchemy = "^2.3.0"
spacy = "^3.1.2"
skweak = "^0.2.13"
PyYAML = "^5.4.1"

[tool.poetry.dev-dependencies]
pytest = "^6.0"
pylint = "^2.9.6"
yapf = "^0.31.0"
Sphinx = "^4.1.2"
isort = "^5.9.3"
pytest-cov = "^2.12.1"
pre-commit = "^2.15.0"

[tool.isort]
profile = "hug"
src_paths = ["eyes", "tests"]

[tool.poetry.scripts]
eyes = "eyes.cmd:cli"

[tool.pytest.ini_options]
addopts = "--cov=eyes --cov-report xml"
markers = [
    "slow: slow tests",
    "dcard: dcard tests"
]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
